added utils for CleanName support
